# project-rs

./: .gitignore  Cargo.toml  README.md  imgui.ini  linux.sh  setup.sh
.github/workflows/: rust.yml
src/: app.rs  calibrate.rs  detection.rs  image.rs  lib.rs  main.rs  utils.rs  window.rs  yolo.rs
