[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
colors-transform = "0.2.11"
imgui = { version = "0.12.0", features = ["docking"] }
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
opencv = "0.92.3"
rayon = "1.10.0"
sdl2 = { version = "0.37.0", features = ["bundled"] }

[profile.dev.package.imgui]
opt-level = 2
debug-assertions = false
