[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
colors-transform = "0.2.11"
glutin = "0.32.1"
glutin-winit = "0.5.0"
imgui = { version = "0.12.0", features = ["docking", "tables-api"] }
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
opencv = "0.92.3"
rayon = "1.10.0"
winit = "0.30.5"

[profile.dev.package.imgui]
opt-level = 2
debug-assertions = false
